--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/diagnostic": "^4.10.0",
     "@ionic-native/http": "^4.10.0",
+    "@ionic-native/paypal": "^4.10.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "^2.1.3",
+    "card.io.cordova.mobilesdk": "^2.1.0",
+    "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "7.0.0",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-audiotoggle": "^1.0.3",
@@ -60,7 +63,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-audiotoggle": {}
+      "cordova-plugin-audiotoggle": {},
+      "com.paypal.cordova.mobilesdk": {}
     },
     "platforms": [
       "android"
