--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/contacts": "^4.10.0",
     "@ionic-native/core": "~4.10.0",
+    "@ionic-native/device": "^4.10.1",
     "@ionic-native/diagnostic": "^4.10.0",
     "@ionic-native/http": "^4.10.0",
     "@ionic-native/paypal": "^4.10.0",
@@ -46,6 +47,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "sweetalert2": "^7.26.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
