--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/device": "^4.10.1",
     "@ionic-native/diagnostic": "^4.10.0",
     "@ionic-native/http": "^4.10.0",
+    "@ionic-native/in-app-browser": "^4.17.0",
     "@ionic-native/paypal": "^4.10.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
@@ -38,6 +39,7 @@
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -66,7 +68,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-audiotoggle": {},
-      "com.paypal.cordova.mobilesdk": {}
+      "com.paypal.cordova.mobilesdk": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
