--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/device": "^4.10.1",
     "@ionic-native/diagnostic": "^4.10.0",
+    "@ionic-native/fcm": "^4.17.0",
     "@ionic-native/http": "^4.10.0",
     "@ionic-native/in-app-browser": "^4.17.0",
     "@ionic-native/paypal": "^4.10.0",
@@ -38,6 +39,7 @@
     "cordova-plugin-audiotoggle": "^1.0.3",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -69,7 +71,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-audiotoggle": {},
       "com.paypal.cordova.mobilesdk": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-fcm": {}
     },
     "platforms": [
       "android"
