Billing modulo igual a ios

--- a/package.json
+++ b/package.json
@@ -74,8 +74,6 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-fcm": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
