--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/code-push": "^4.17.0",
     "@ionic-native/contacts": "^4.10.0",
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/device": "^4.10.1",
     "@ionic-native/diagnostic": "^4.10.0",
     "@ionic-native/fcm": "^4.17.0",
-    "@ionic-native/http": "^4.10.0",
+    "@ionic-native/http": "^4.17.0",
     "@ionic-native/in-app-browser": "^4.17.0",
     "@ionic-native/paypal": "^4.10.0",
     "@ionic-native/splash-screen": "~4.10.0",
@@ -35,17 +36,20 @@
     "card.io.cordova.mobilesdk": "^2.1.0",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "7.0.0",
-    "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-advanced-http": "^2.0.1",
     "cordova-plugin-audiotoggle": "^1.0.3",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-fcm": "^2.1.2",
-    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file": "^4.3.3",
+    "cordova-plugin-file-transfer": "^1.6.3",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-zip": "^3.1.0",
     "cordova.plugins.diagnostic": "^4.0.8",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -61,7 +65,6 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-advanced-http": {},
       "cordova.plugins.diagnostic": {},
       "cordova-plugin-contacts": {},
       "cordova-plugin-whitelist": {},
@@ -72,7 +75,12 @@
       "cordova-plugin-audiotoggle": {},
       "com.paypal.cordova.mobilesdk": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-fcm": {}
+      "cordova-plugin-fcm": {},
+      "cordova-plugin-code-push": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-zip": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": []
   }
